--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "react-toastify": "^9.1.3",
